# PXRD-Validation-Paper

./: .gitignore  README.md  pyproject.toml
0_Data/2_Compiled_Data/: EPMA_compile.xlsx  Mafic_compiled_data_Mode.xlsx  Mafic_compiled_data_Param.xlsx  Mafic_compiled_data_XRF.xlsx  Mafic_compiled_data_XRF_LOI.xlsx  Mafic_mineral_density_median.xlsx  Param_compile_df.xlsx  Path_Rietveld_df.xlsx  Path_Rietveld_lst_df.xlsx  Pelitic_compiled_data_Mode.xlsx  Pelitic_compiled_data_Param.xlsx  Pelitic_compiled_data_XRF.xlsx  Pelitic_compiled_data_XRF_LOI.xlsx  Pelitic_mineral_density_median.xlsx  Sample_name_list.xlsx  df_Compiled_Mineral_vol.xlsx  df_Compiled_Mineral_vol_LAB.xlsx  df_Compiled_Mineral_vol_SP8.xlsx  df_compiled_data_Mode_EPMA.xlsx  df_mineral_wt_comp_>bulk_comp_lab.xlsx  df_mineral_wt_comp_>bulk_comp_sp8.xlsx  df_volume_mineral_comp_>bulk_comp_EPMA.xlsx  df_volume_mineral_comp_>bulk_comp_lab.xlsx  df_volume_mineral_comp_>bulk_comp_melt.xlsx  df_volume_mineral_comp_>bulk_comp_melt_EPMA.xlsx  df_volume_mineral_comp_>bulk_comp_sp8.xlsx  df_volume_mineral_comp_mineral_density_med_>bulk_comp_melt.xlsx  error_data_df.xlsx  pivot_bulk_comp_df.xlsx  pivot_bulk_mode_df.xlsx  pivot_chem_df.xlsx  pivot_error_df.xlsx
2_Program/: 0_0_.lst_file_compiler.ipynb  0_0_Compile_Rietveld_Result_240919.ipynb  0_1_Summarize_Data_240919.ipynb  0_1_Summarize_Data_251109.ipynb  0_3_Raw_mineral_mode_visualization.ipynb  0_Data Compile.ipynb
