[project]
name = "pxrd-validation-ms"
version = "0.1.0"
description = ""
authors = [
    {name = "Satoshi Matsuno",email = "51268793+MSrakugo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pymatgen (>=2025.10.7,<2026.0.0)",
    "spglib (>=2.6.0,<3.0.0)",
    "gemmi (>=0.7.3,<0.8.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
